# build-couchdb

./: .gitignore  .gitmodules  README.md  Rakefile  TODO  env.sh
Documentation/: TODO  getting_spidermonkey.txt.md
dependencies/autoconf-2.69/doc/: autoconf.texi
dependencies/automake-1.11.2/: AUTHORS  ChangeLog  ChangeLog.03  ChangeLog.09  ChangeLog.96  ChangeLog.98  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  aclocal.in  aclocal.m4  automake.in  bootstrap  configure  configure.ac
dependencies/automake-1.11.2/doc/: Makefile.am  Makefile.in  aclocal-1.11.1  automake-1.11.1  automake.info  automake.info-1  automake.info-2  automake.info-3  automake.texi  stamp-vti
dependencies/automake-1.11.2/doc/amhello/: Makefile.am
dependencies/automake-1.11.2/doc/amhello/src/: Makefile.am
dependencies/automake-1.11.2/lib/: Makefile.am  Makefile.in  gnupload
dependencies/automake-1.11.2/lib/Automake/: Config.in  Makefile.am  Makefile.in  Options.pm  Variable.pm
dependencies/automake-1.11.2/lib/Automake/tests/: Makefile.am  Makefile.in
dependencies/automake-1.11.2/lib/am/: Makefile.am  Makefile.in  check.am  configure.am  distdir.am
dependencies/automake-1.11.2/m4/: Makefile.am  Makefile.in  amversion.in  amversion.m4  python.m4
dependencies/automake-1.11.2/tests/: Makefile.am  Makefile.in  README  aclibobj.test  acloca10.test  acloca14.test  acloca18.test  acloca19.test  aclocal-acdir.test  aclocal-path-install-serial.test  aclocal-path-install.test  aclocal-path-nonexistent.test  aclocal-path-precedence.test  aclocal-path.test  aclocal-print-acdir.test  aclocal.in  aclocal.test  aclocal3.test  aclocal4.test  aclocal5.test  aclocal6.test  aclocal8.test  acoutbs.test  acoutbs2.test  acoutnoq.test  acoutpt.test  acoutpt2.test  acoutqnl.test  acsilent.test  all.test  all2.test  alloca.test  alloca2.test  amassign.test  amhello-binpkg.test  amhello-cflags.test  amhello-cross-compile.test  ammissing.test  ansi.test  ansi10.test  (+602 more)
dependencies/spidermonkey/: .gitignore
lib/: futex_test.c
lib/templates/: rebar.config.script
tasks/: all.rake  couchdb.rake  curl.rake  distro.rake  distros.rb  environment.rake  erlang.rake  export.rake  icu.rake  lib.rb  places.rake  places.rb  shortcuts.rake  toolchain.rake  tracemonkey.rake
tasks/lib/: distros.rb  package_dep.rb
templates/: env.sh.erb
